--- a/bluehive.html
+++ b/bluehive.html
@@ -22,7 +22,7 @@
 <h1>Blue Hive</h1>
 <p>Career and Visa Q&A mobile app for UMich international student</p>
 
-<a href="finaldesign">Final Design</a>
+<a href="finaldesign">Check My Final Design</a>
 
 <h2>Course</h2>
 SI 582: Introduction to Interaction Design (Individual Project)
@@ -46,7 +46,7 @@ Presentation
 Fall 2018
 
 <h2>Overview</h2>
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/final app showcase@4x.png" alt="overall">
+<img src="images/BlueHIve/final app showcase@4x.png" alt="overall">
 
 
 At the University of Michigan, international students can access various resources through the International Center. With less than 10 international advisors employed for more than 7,000 international students, the current advising system is very time-consuming. Currently, there aren’t any mobile platforms available for all University of Michigan international students to share their concerns and questions. I designed a mobile app that focuses on the career struggles that international students face, connecting all international students to come together and thrive in a collaborative environment.
@@ -67,11 +67,11 @@ To see if there are currently existing solutions available in the market, I cond
 While there weren't exactly the same services that are specifically catered to international students, I found five similar solutions that provide similar features and analyzed the strengths and deficiencies of each services. Out of five, one is a Q&A mobile app, three are mobile app for private international student education entities and one is an University-affiliated mobile app.
 
 
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/Competitor Analysis – 5@3x.png" alt="ca1">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/Competitor Analysis@3x.png" alt="ca2">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/Competitor Analysis – 1@3x.png" alt="ca3">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/Competitor Analysis – 3@3x.png" alt="ca4">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/Competitor Analysis – 5@3x.png" alt="ca5">
+<img src="images/BlueHIve/Competitor Analysis – 5@3x.png" alt="ca1">
+<img src="images/BlueHIve/Competitor Analysis@3x.png" alt="ca2">
+<img src="images/BlueHIve/Competitor Analysis – 1@3x.png" alt="ca3">
+<img src="images/BlueHIve/Competitor Analysis – 3@3x.png" alt="ca4">
+<img src="images/BlueHIve/Competitor Analysis – 5@3x.png" alt="ca5">
 
 
 <h2>User Research</h2>
@@ -102,14 +102,14 @@ I came up with 8 possible design solutions to solve various challenges internati
 
 <h2>8 ideation sketches</h2>
 
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/sketches-2.jpg" alt="sketch1">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/sketches.jpg" alt="sketch2">
+<img src="images/BlueHIve/sketches-2.jpg" alt="sketch1">
+<img src="images/BlueHIve/sketches.jpg" alt="sketch2">
 
 <h2>Storyboarding</h2>
 To understand the goal and possible user behavior through my solutions, I sketched a short five-cut storyboard for each solution. The storyboards helped me to go through the flow from encountering the problem to using the solutions to solve the users problem.
 
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/storyboard_-2.jpg" alt="sketch1">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/storyboard_.jpg" alt="sketch2">
+<img src="images/BlueHIve/storyboard_-2.jpg" alt="sketch1">
+<img src="images/BlueHIve/storyboard_.jpg" alt="sketch2">
 
 I showed my storyboards to three international students and received feedback on these storyboards. Combined with user research result and feedback from students, I decided to focus on career concerns for international students by combining "Online Community forum" and "Career Information platform."
 
@@ -129,9 +129,9 @@ I showed my storyboards to three international students and received feedback on
 I created three personas to clearly understand the needs and goals of my primary target users.
 Also, I made one anti-persona to define who would not use this service.
 
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/persona 1@3x.png" alt="persona1">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/persona 2@3x.png" alt="persona2">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/persona 3@3x.png" alt="persona3">
+<img src="images/BlueHIve/persona 1@3x.png" alt="persona1">
+<img src="images/BlueHIve/persona 2@3x.png" alt="persona2">
+<img src="images/BlueHIve/persona 3@3x.png" alt="persona3">
 
 
 <h2>Design Rationale & QOC Analysis</h2>
@@ -143,22 +143,22 @@ In order to defend my design rationales, I conducted a QOC analysis and looked a
   <li>3. Anonymous Stories</li>
 </ol>
 
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/QOC_1.png" alt="QOC1">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/QOC_2.png" alt="QOC2">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/QOC_3.png" alt="QOC3">
+<img src="images/BlueHIve/QOC_1.png" alt="QOC1">
+<img src="images/BlueHIve/QOC_2.png" alt="QOC2">
+<img src="images/BlueHIve/QOC_3.png" alt="QOC3">
 
 After receiving feedbacks from the professor and peers, and analyzing three options carefully, I chose the first option "Q&A Board with Keyword Search" to move forward with the design.
 
 <h2>User Flow & Wire Framing</h2>
 After analyzing the main user tasks, I created a user flow diagram with low-fi wireframes.
 
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/Userflow.png" alt="Userflow">
+<img src="images/BlueHIve/Userflow.png" alt="Userflow">
 
 
 <h2>Paper Prototyping</h2>
 I designed low fidelity prototype and made a paper prototype video for 12 tasks users would go through using Blue Hive.
 
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/Userflow.png" alt="Userflow">
+<img src="images/BlueHIve/Userflow.png" alt="Userflow">
 
 <ol>
   <li>1. Create Account & Log in</li>
@@ -180,8 +180,8 @@ I designed low fidelity prototype and made a paper prototype video for 12 tasks 
 After receiving feedback from international students and classmates, I designed the final screens for Blue Hive on Adobe XD and Sketch.
 BlueHive's branding signifies how this mobile platform is a collaborative environment for all students as well as represents the colors of the University of Michigan. Also, I tried to portray a bright and inviting vibe to users by incorporating bee illustrations and yellow color theme
 </span>
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/final_prototype.png" alt="final_prototype">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/BlueHIve/UI illustration@4x.png" alt="final_prototype2">
+<img src="images/BlueHIve/final_prototype.png" alt="final_prototype">
+<img src="images/BlueHIve/UI illustration@4x.png" alt="final_prototype2">
 
 <h2>Solution & Key Features</h2>
 Below are interaction prototype and videos for the top 9 features users would use more frequently in Blue Hive.
