--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	        </ul>
 	    </nav>
 
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Main/mainprofile.png" alt="Sunny profile">
+<img src="images/Main/mainprofile.png" alt="Sunny profile">
 
 <h1>HELLO, I'm sunny.</h1>
 
