--- a/photography.html
+++ b/photography.html
@@ -19,7 +19,7 @@
 	        </ul>
 	    </nav>
 
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/photo_memory.png" alt="Sunny profile">
+<img src="images/Photography/photo_memory.png" alt="Sunny profile">
 
 
 <p>I remember going through my mom's old albums and finding this photo.
@@ -32,17 +32,17 @@ during the very first family trip we had in Jeju Island.</p>
 that one time you had girl's night with your friends,
 we all have those moments in life.</p>
 
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/20170907_June&DJ_Sunflower4.jpg" alt="sunflower1">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/20170907_June&DJ_Sunflower5.jpg" alt="sunflower2">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/Chung_Beach_3.png" alt="chung1">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/Diers_Family_Hanbok_4.jpg" alt="hanbok1">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/Diers_Family_Hanbok_5.jpg" alt="hanbok2">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/Diers_Family_Hanbok_6.jpg" alt="hanbok3">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/Diers_Family_Park_17.jpg" alt="hanbok4">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/Hondo_1.jpg" alt="dog1">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/main_kc.png" alt="kc">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/Sena_Evan_Family-4.jpg" alt="family1">
-<img src="/Users/sunnykim/Desktop/539 Portfolio/images/Photography/Sena_Evan_Family.jpg" alt="family2">
+<img src="images/Photography/20170907_June&DJ_Sunflower4.jpg" alt="sunflower1">
+<img src="images/Photography/20170907_June&DJ_Sunflower5.jpg" alt="sunflower2">
+<img src="images/Photography/Chung_Beach_3.png" alt="chung1">
+<img src="images/Photography/Diers_Family_Hanbok_4.jpg" alt="hanbok1">
+<img src="images/Photography/Diers_Family_Hanbok_5.jpg" alt="hanbok2">
+<img src="images/Photography/Diers_Family_Hanbok_6.jpg" alt="hanbok3">
+<img src="images/Photography/Diers_Family_Park_17.jpg" alt="hanbok4">
+<img src="images/Photography/Hondo_1.jpg" alt="dog1">
+<img src="images/Photography/main_kc.png" alt="kc">
+<img src="images/Photography/Sena_Evan_Family-4.jpg" alt="family1">
+<img src="images/Photography/Sena_Evan_Family.jpg" alt="family2">
 
 </body>
 
