--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	    <nav>
 	        <ul>
 	            <li><a href = "index.html">ABOUT</a></li>
-	            <li><a href = "schedule.html">WORK</a></li>
-	            <li><a href = "coursera.html">SIDE THINGS</a></li>
+	            <li><a href = "bluehive.html">WORK</a></li>
+	            <li><a href = "photography.html">SIDE THINGS</a></li>
 	            <li><a href = "contact.html">CONTACT</a></li>
 	        </ul>
 	    </nav>
