--- a/bluehive.html
+++ b/bluehive.html
@@ -13,8 +13,7 @@
 	    <nav>
 	        <ul>
 	            <li><a href = "index.html">ABOUT</a></li>
-              <li><a href = "bluehive.html">PROJECT</a></li>
-              <li><a href = "work.html">WORK</a></li>
+              <li><a href = "bluehive.html">WORK</a></li>
               <li><a href = "photography.html">SIDE THINGS</a></li>
 	            <li><a href = "contact.html">CONTACT</a></li>
 	        </ul>
