--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <link rel="shortcut icon" href="images/signature_vertical_U_white.png" />
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/mobilestyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|EB+Garamond|Source+Serif+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
 
 </head>
 <body>
+  <style>
+  body {
+      font-family: 'Cardo';font-size: 22px;
+  }
+  </style>
 
 	<header>
+    <p class="titleline">SUNNY KIM</p>
 	    <nav>
 	        <ul>
 	            <li><a href = "index.html">ABOUT</a></li>
@@ -18,42 +28,29 @@
 	            <li><a href = "contact.html">CONTACT</a></li>
 	        </ul>
 	    </nav>
+    </header>
 
 <img src="images/Main/mainprofile.png" alt="Sunny profile">
 
-<h1>HELLO, I'm sunny.</h1>
-
-<p>I am a first year Masters of Information student at the
-University of Michigan focusing on UX Design and HCI.</p>
-​
-<p>Born in Seoul, South Korea and raised in Kansas City, MO,
-I’m a big city native with a Midwestern charm.</p>
-​
-<p>My passion is to create meaningful experiences that connect people,
-especially those eye-catching visuals and attention grabbing design.</p>
-​
-<p>I love learning new things. I take challenges and I work hard.
+<p class="hello">HELLO, I'M SUNNY.</p>
+<br>
+<p class="intro">I am a first year Masters of Information student at the
+University of Michigan focusing on UX Design and HCI.<br>
+​<br>
+Born in Seoul, South Korea and raised in Kansas City, MO,
+I’m a big city native with a Midwestern charm.<br>
+​<br>
+My passion is to create meaningful experiences that connect people,
+especially those eye-catching visuals and attention grabbing design.<br>
+​<br>
+I love learning new things. I take challenges and I work hard.
 And I always look at the bright side of things. (did you notice my name?)</p>
-
-<p>I'm currently seeking internship in UX & Product Design for Summer 2019.</p>
-
-<p>Click HERE to download my resume.</p>
-
+<br>
 </body>
 
 
 <footer>
-  <section class="columns">
-
-  	<div class="column">
-  		<h2>Linkedin</h2>
-  	</div>
-
-  	<div class="column">
-  		<h2>Dribbble</h2>
-  	</div>
-
-    <div class="column">
-  		<h2>Behance</h2>
+  <div class="footer">
+    <h3>Coded by Sunny Kim 2019</h3>
   	</div>
 </footer>
