--- a/photography.html
+++ b/photography.html
@@ -5,11 +5,14 @@
     <link rel="shortcut icon" href="images/signature_vertical_U_white.png" />
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/mobilestyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|EB+Garamond|Source+Serif+Pro" rel="stylesheet">
 
 </head>
 <body>
 
 	<header>
+    <p class="titleline">SUNNY KIM</p>
 	    <nav>
 	        <ul>
 	            <li><a href = "index.html">ABOUT</a></li>
@@ -19,16 +22,18 @@
 	        </ul>
 	    </nav>
 
+<p class="sub-title"> PHOTOGRAPHY </p>
+
 <img src="images/Photography/photo_memory.png" alt="Sunny profile">
 
 
-<p>I remember going through my mom's old albums and finding this photo.
+<p class="photo">I remember going through my mom's old albums and finding this photo.
 This is a photo my dad took in 1996, of me and my mom holding hands together
-during the very first family trip we had in Jeju Island.</p>
-​
-<p>What I love about photography is that it brings you back to that moment.</p>
-
-<p>Whether it's your first family trip or
+during the very first family trip we had in Jeju Island.<br>
+​<br>
+What I love about photography is that it brings you back to that moment.<br>
+​<br>
+Whether it's your first family trip or
 that one time you had girl's night with your friends,
 we all have those moments in life.</p>
 
@@ -48,17 +53,7 @@ we all have those moments in life.</p>
 
 
 <footer>
-  <section class="columns">
-
-  	<div class="column">
-  		<h2>Linkedin</h2>
-  	</div>
-
-  	<div class="column">
-  		<h2>Dribbble</h2>
-  	</div>
-
-    <div class="column">
-  		<h2>Behance</h2>
+  <div class="footer">
+  		<h3>Coded by Sunny Kim 2019</h3>
   	</div>
 </footer>
