--- a/work.html
+++ b/work.html
@@ -5,10 +5,12 @@
     <link rel="shortcut icon" href="images/signature_vertical_U_white.png" />
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/mobilestyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|EB+Garamond|Source+Serif+Pro" rel="stylesheet">
 
 </head>
 <body>
-
+  <p class="titleline">SUNNY KIM</p>
 	<header>
 	    <nav>
 	        <ul>
@@ -44,14 +46,14 @@
   <section class="columns">
 
   	<div class="column">
-  		<h2>Linkedin</h2>
+      <i class="fab fa-linkedin"></i>
   	</div>
 
   	<div class="column">
-  		<h2>Dribbble</h2>
+      <i class="fab fa-dribbble"></i>
   	</div>
 
     <div class="column">
-  		<h2>Behance</h2>
+      <i class="fab fa-behance"></i>
   	</div>
 </footer>
