--- a/bluehive.html
+++ b/bluehive.html
@@ -5,11 +5,13 @@
     <link rel="shortcut icon" href="images/signature_vertical_U_white.png" />
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/mobilestyle.css">
 
 </head>
 <body>
 
 	<header>
+    <p class="titleline">SUNNY KIM</p>
 	    <nav>
 	        <ul>
 	            <li><a href = "index.html">ABOUT</a></li>
@@ -19,52 +21,53 @@
 	        </ul>
 	    </nav>
 
-<h1>Blue Hive</h1>
-<p>Career and Visa Q&A mobile app for UMich international student</p>
+<p class="sub-title">Blue Hive</p><br>
+<p class="text"><b>Career and Visa Q&A mobile app for UMich international student</b></p>
 
-<a href="finaldesign">Check My Final Design</a>
 
-<h2>Course</h2>
-SI 582: Introduction to Interaction Design (Individual Project)
+<div class="skiptocontent"><a href="#content">Check My Final Design</a></div>
 
-<h2>Tools</h2>
-Sketch
-Balsamiq
-Adobe XD
-Adobe Illustrator
-Adobe Photoshop
+<br>
+<p class="projectcat">Course</p>
+<p class="text">SI 582: Introduction to Interaction Design (Individual Project)</p>
 
-<h2>Skills</h2>
-User Research
-Analysis
-Ideation
-Sketching
-Prototyping
-Presentation
+<p class="projectcat">Tools</p>
+<p class="text">Sketch<br>
+Balsamiq<br>
+Adobe XD<br>
+Adobe Illustrator<br>
+Adobe Photoshop</p>
 
-<h2>Duration</h2>
-Fall 2018
+<p class="projectcat">Skills</p>
+<p class="text">User Research<br>
+Analysis<br>
+Ideation<br>
+Sketching<br>
+Prototyping<br>
+Presentation</p>
 
-<h2>Overview</h2>
+<p class="projectcat">Duration</p>
+<p class="text">Fall 2018</p>
+
 <img src="images/BlueHIve/final app showcase@4x.png" alt="overall">
 
+<p class="subcat">Overview</p>
+<p class="text">At the University of Michigan, international students can access various resources through the International Center. With less than 10 international advisors employed for more than 7,000 international students, the current advising system is very time-consuming. Currently, there aren’t any mobile platforms available for all University of Michigan international students to share their concerns and questions. I designed a mobile app that focuses on the career struggles that international students face, connecting all international students to come together and thrive in a collaborative environment.<p>
 
-At the University of Michigan, international students can access various resources through the International Center. With less than 10 international advisors employed for more than 7,000 international students, the current advising system is very time-consuming. Currently, there aren’t any mobile platforms available for all University of Michigan international students to share their concerns and questions. I designed a mobile app that focuses on the career struggles that international students face, connecting all international students to come together and thrive in a collaborative environment.
+<p class="subcat">The Challenge</p>
+<p class="text">Working in the United States a never-ending question mark for international students. Starting from visa status to career options, international students face many problems that American students might not have even considered before. Different from domestic students in the U.S., international students need to get sponsorships from the employer upon graduation in order to work and stay legal in the United States. A lot of students waste their time and energy only to find out that they cannot legally receive sponsorships from the companies they applied for.<br>
+<br>
+<b>"Not only do international students have a hard time searching for jobs in the U.S, they need to consider legal status, visa processing, and sponsorships."​</b><br>
+<br>
+One of the main reason is that staffs and advisors at the International Center can't fully understand these struggles and are unable to sympathize with students. Also, it is hard for staffs to help students in answering specific questions as a lot of those questions depend on each students' personal experience and visa status.</p>
 
-<h2>The Challenge</h2>
-Working in the United States a never-ending question mark for international students. Starting from visa status to career options, international students face many problems that American students might not have even considered before. Different from domestic students in the U.S., international students need to get sponsorships from the employer upon graduation in order to work and stay legal in the United States. A lot of students waste their time and energy only to find out that they cannot legally receive sponsorships from the companies they applied for.
+<p class="subcat">Design Process</p>
+<p class="text">I based my design on participatory design by putting “international students” in the center of this project and involving users throughout the process. As an international student myself, I tried not to assume or make decision based on my personal experiences.</p>
 
-"Not only do international students have a hard time searching for jobs in the U.S, they need to consider legal status, visa processing, and sponsorships."​
-
-One of the main reason is that staffs and advisors at the International Center can't fully understand these struggles and are unable to sympathize with students. Also, it is hard for staffs to help students in answering specific questions as a lot of those questions depend on each students' personal experience and visa status.
-
-<h2>Design Process</h2>
-I based my design on participatory design by putting “international students” in the center of this project and involving users throughout the process. As an international student myself, I tried not to assume or make decision based on my personal experiences.
-
-<h2>Competitive Analysis</h2>
-To see if there are currently existing solutions available in the market, I conducted a competitive analysis.
-
-While there weren't exactly the same services that are specifically catered to international students, I found five similar solutions that provide similar features and analyzed the strengths and deficiencies of each services. Out of five, one is a Q&A mobile app, three are mobile app for private international student education entities and one is an University-affiliated mobile app.
+<p class="subcat">Competitive Analysis</p>
+<p class="text"> To see if there are currently existing solutions available in the market, I conducted a competitive analysis.<br>
+<br>
+While there weren't exactly the same services that are specifically catered to international students, I found five similar solutions that provide similar features and analyzed the strengths and deficiencies of each services. Out of five, one is a Q&A mobile app, three are mobile app for private international student education entities and one is an University-affiliated mobile app.</p>
 
 
 <img src="images/BlueHIve/Competitor Analysis – 5@3x.png" alt="ca1">
@@ -74,20 +77,20 @@ While there weren't exactly the same services that are specifically catered to i
 <img src="images/BlueHIve/Competitor Analysis – 5@3x.png" alt="ca5">
 
 
-<h2>User Research</h2>
-I conducted a survey with 46 undergraduate and graduate international students at the University of Michigan and interviewed 5 of them.
-​
-"lt's hard to find jobs that will actually sponsor me."
-
-The magnitude of the issue could be further glanced in the informal survey I conducted with 46 international students. 83% of respondents said that "Career and H1B Sponsorship" is the hardest parts about being an international student in the United States (n = 38), and about 61% of respondents (n = 28) wished there was a platform they could connect to each other about "Work Authorization."
-
-"I've met with advisors for career advices. They were NOT helpful."
-
+<p class="subcat">User Research</p>
+<p class="text"> I conducted a survey with 46 undergraduate and graduate international students at the University of Michigan and interviewed 5 of them.<br>
+<br>​
+<b>"lt's hard to find jobs that will actually sponsor me."</b><br>
+<br>
+The magnitude of the issue could be further glanced in the informal survey I conducted with 46 international students. 83% of respondents said that "Career and H1B Sponsorship" is the hardest parts about being an international student in the United States (n = 38), and about 61% of respondents (n = 28) wished there was a platform they could connect to each other about "Work Authorization."<br>
+<br>
+<b>"I've met with advisors for career advices. They were NOT helpful."</b><br>
+<br>
 Through interviews, I found out that many international students were not satisfied with the current career advising provided by the University of Michigan. Three out of five interviewees stated that they have not found the career advising session helpful, as the advisors couldn't fully understand what they were going through.
+</p>
 
-
-<h2>Brainstorming  & Ideation</h2>
-I came up with 8 possible design solutions to solve various challenges international students are going through and created storyboard for each of the solutions.
+<p class="subcat">Brainstorming  & Ideation</p>
+<p class="text">I came up with 8 possible design solutions to solve various challenges international students are going through and created storyboard for each of the solutions.</p>
 
 <ol>
   <li>1. Visa Status & Legal Mobile App</li>
@@ -100,18 +103,18 @@ I came up with 8 possible design solutions to solve various challenges internati
   <li>8. Virtual advisor</li>
 </ol>
 
-<h2>8 ideation sketches</h2>
+<p class="subcat">8 ideation sketches</p>
 
 <img src="images/BlueHIve/sketches-2.jpg" alt="sketch1">
 <img src="images/BlueHIve/sketches.jpg" alt="sketch2">
 
-<h2>Storyboarding</h2>
-To understand the goal and possible user behavior through my solutions, I sketched a short five-cut storyboard for each solution. The storyboards helped me to go through the flow from encountering the problem to using the solutions to solve the users problem.
+<p class="subcat">Storyboarding</p>
+<p class="text">To understand the goal and possible user behavior through my solutions, I sketched a short five-cut storyboard for each solution. The storyboards helped me to go through the flow from encountering the problem to using the solutions to solve the users problem.</p>
 
 <img src="images/BlueHIve/storyboard_-2.jpg" alt="sketch1">
 <img src="images/BlueHIve/storyboard_.jpg" alt="sketch2">
 
-I showed my storyboards to three international students and received feedback on these storyboards. Combined with user research result and feedback from students, I decided to focus on career concerns for international students by combining "Online Community forum" and "Career Information platform."
+<p class="text">I showed my storyboards to three international students and received feedback on these storyboards. Combined with user research result and feedback from students, I decided to focus on career concerns for international students by combining "Online Community forum" and "Career Information platform."</p>
 
 <ol>
   <li>1. 360-AR Skype for international students</li>
@@ -125,17 +128,17 @@ I showed my storyboards to three international students and received feedback on
 </ol>
 
 
-<h2>Persona</h2>
-I created three personas to clearly understand the needs and goals of my primary target users.
-Also, I made one anti-persona to define who would not use this service.
+<p class="subcat">Persona</p>
+<p class="text">I created three personas to clearly understand the needs and goals of my primary target users.
+Also, I made one anti-persona to define who would not use this service.</p>
 
 <img src="images/BlueHIve/persona 1@3x.png" alt="persona1">
 <img src="images/BlueHIve/persona 2@3x.png" alt="persona2">
 <img src="images/BlueHIve/persona 3@3x.png" alt="persona3">
 
 
-<h2>Design Rationale & QOC Analysis</h2>
-In order to defend my design rationales, I conducted a QOC analysis and looked at possible design options for this mobile platform.
+<p class="subcat">Design Rationale & QOC Analysis</p>
+<p class="text">In order to defend my design rationales, I conducted a QOC analysis and looked at possible design options for this mobile platform.</p>
 
 <ol>
   <li>1. Q&A Board with Keyword Search</li>
@@ -147,16 +150,16 @@ In order to defend my design rationales, I conducted a QOC analysis and looked a
 <img src="images/BlueHIve/QOC_2.png" alt="QOC2">
 <img src="images/BlueHIve/QOC_3.png" alt="QOC3">
 
-After receiving feedbacks from the professor and peers, and analyzing three options carefully, I chose the first option "Q&A Board with Keyword Search" to move forward with the design.
+<p class="text">After receiving feedbacks from the professor and peers, and analyzing three options carefully, I chose the first option "Q&A Board with Keyword Search" to move forward with the design.</p>
 
-<h2>User Flow & Wire Framing</h2>
-After analyzing the main user tasks, I created a user flow diagram with low-fi wireframes.
+<p class="subcat">User Flow & Wire Framing</p>
+<p class="text">After analyzing the main user tasks, I created a user flow diagram with low-fi wireframes.</p>
 
 <img src="images/BlueHIve/Userflow.png" alt="Userflow">
 
 
-<h2>Paper Prototyping</h2>
-I designed low fidelity prototype and made a paper prototype video for 12 tasks users would go through using Blue Hive.
+<p class="subcat">Paper Prototyping</p>
+<p class="text">I designed low fidelity prototype and made a paper prototype video for 12 tasks users would go through using Blue Hive.</p>
 
 <img src="images/BlueHIve/Userflow.png" alt="Userflow">
 
@@ -175,37 +178,28 @@ I designed low fidelity prototype and made a paper prototype video for 12 tasks 
   <li>12. User checks bookmarks</li>
 </ol>
 
-<span id="finaldesign">
-<h2>Final Design</h2>
-After receiving feedback from international students and classmates, I designed the final screens for Blue Hive on Adobe XD and Sketch.
-BlueHive's branding signifies how this mobile platform is a collaborative environment for all students as well as represents the colors of the University of Michigan. Also, I tried to portray a bright and inviting vibe to users by incorporating bee illustrations and yellow color theme
+<main id = "content">
+<p class="subcat">Final Design</p>
+<p class="text">After receiving feedback from international students and classmates, I designed the final screens for Blue Hive on Adobe XD and Sketch.<br>
+BlueHive's branding signifies how this mobile platform is a collaborative environment for all students as well as represents the colors of the University of Michigan. Also, I tried to portray a bright and inviting vibe to users by incorporating bee illustrations and yellow color theme.</p>
 </span>
 <img src="images/BlueHIve/final_prototype.png" alt="final_prototype">
 <img src="images/BlueHIve/UI illustration@4x.png" alt="final_prototype2">
+</main>
 
-<h2>Solution & Key Features</h2>
-Below are interaction prototype and videos for the top 9 features users would use more frequently in Blue Hive.
+<p class="subcat">Solution & Key Features</p>
+<p class="text">Below are interaction prototype and videos for the top 9 features users would use more frequently in Blue Hive.</p>
 
-<h2>Reflection</h2>
+<p class="subcat">Reflection</p>
 
-Sometimes for designers who currently work in the field, I believe we rarely get a chance to interact with end users from beginning to end of the design process. Throughout the BlueHive project, I practiced participatory design by trying to receive and input user feedback in every step of the design process. It was also unique in that I was part of the target users for this mobile application.
-
-There were some unexpected responses from users and I had to make changes that corresponds to those feedback. By showing users my design sketches and sharing ideas with them, I was able to understand their point of view and gain valuable insights.
-
-Throughout this experience, I learned that I am not designing something I want but rather what the users really need. Specifically for this project, it is key that the users actually create content in order to facilitate the collaboration among each other. I was able to hear what factors drive users to actively participate in asking questions and responding to each other. As a designer, I learned that I have to understand not only what users go through from starting to finishing their tasks but also why they made those choices and how they go about their actions.
+<p class="text">Sometimes for designers who currently work in the field, I believe we rarely get a chance to interact with end users from beginning to end of the design process. Throughout the BlueHive project, I practiced participatory design by trying to receive and input user feedback in every step of the design process. It was also unique in that I was part of the target users for this mobile application.<br>
+<br>
+There were some unexpected responses from users and I had to make changes that corresponds to those feedback. By showing users my design sketches and sharing ideas with them, I was able to understand their point of view and gain valuable insights.<br>
+<br>
+Throughout this experience, I learned that I am not designing something I want but rather what the users really need. Specifically for this project, it is key that the users actually create content in order to facilitate the collaboration among each other. I was able to hear what factors drive users to actively participate in asking questions and responding to each other. As a designer, I learned that I have to understand not only what users go through from starting to finishing their tasks but also why they made those choices and how they go about their actions.</p>
 
 <footer>
-  <section class="columns">
-
-  	<div class="column">
-  		<h2>Linkedin</h2>
-  	</div>
-
-  	<div class="column">
-  		<h2>Dribbble</h2>
-  	</div>
-
-    <div class="column">
-  		<h2>Behance</h2>
+  <div class="footer">
+    <h3>Coded by Sunny Kim 2019</h3>
   	</div>
 </footer>
