--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,16 @@
     <link rel="shortcut icon" href="images/signature_vertical_U_white.png" />
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/mobilestyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|EB+Garamond|Source+Serif+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
 
 </head>
 <body>
 
 	<header>
+    <p class="titleline">SUNNY KIM</p>
 	    <nav>
 	        <ul>
 	            <li><a href = "index.html">ABOUT</a></li>
@@ -18,30 +23,26 @@
 	            <li><a href = "contact.html">CONTACT</a></li>
 	        </ul>
 	    </nav>
-
-      <h1>LET'S TALK.</h1>
-      ​
-      <h3>But enough about me, let's talk about us.</h3>
-
-      <h1>DOWNLOAD MY RESUME</h1>
-
-      <p>Cell : (913) 232 - 3563</p>
-      <p>﻿Email : minseon@umich.edu</p>
-
+    <div class="contactbg">
+      <br>
+      <p class="hello">LET'S TALK.</p>
+      ​<br>
+      <p class="intro">But enough about me, let's talk about us.</p>
+      <br>
+      <p class="download">
+        <button class="button">Download Resume</button></p>
+      <br>
+      <p class="intro">Cell : (913) 232 - 3563</p>
+      <p class="intro">﻿Email : minseon@umich.edu</p>
+      <i class="fab fa-behance"></i>
+      <i class="fab fa-linkedin-in"></i>
+      <br>
+    </div>
 </body>
 
 <footer>
-  <section class="columns">
-
-  	<div class="column">
-  		<h2>Linkedin</h2>
-  	</div>
-
-  	<div class="column">
-  		<h2>Dribbble</h2>
-  	</div>
-
-    <div class="column">
-  		<h2>Behance</h2>
+  <div class="footer">
+<br>
+    <h3>Coded by Sunny Kim 2019</h3>
   	</div>
 </footer>
