--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,12 @@
 	    <nav>
 	        <ul>
 	            <li><a href = "index.html">ABOUT</a></li>
-              <li><a href = "bluehive.html">WORK</a></li>
+              <li><a href = "work.html">WORK</a></li>
               <li><a href = "photography.html">SIDE THINGS</a></li>
 	            <li><a href = "contact.html">CONTACT</a></li>
 	        </ul>
 	    </nav>
+
     <div class="contactbg">
       <br>
       <p class="hello">LET'S TALK.</p>
@@ -34,10 +35,11 @@
       <br>
       <p class="intro">Cell : (913) 232 - 3563</p>
       <p class="intro">﻿Email : minseon@umich.edu</p>
-      <i class="fab fa-behance"></i>
-      <i class="fab fa-linkedin-in"></i>
+      <div class="icon"><i class="fab fa-behance"></i></div>
+      <div class="icon"><i class="fab fa-linkedin-in"></i></div>
       <br>
     </div>
+
 </body>
 
 <footer>
