--- a/index.html
+++ b/index.html
@@ -12,26 +12,23 @@
 
 </head>
 <body>
-  <style>
-  body {
-      font-family: 'Cardo';font-size: 22px;
-  }
-  </style>
 
 	<header>
     <p class="titleline">SUNNY KIM</p>
 	    <nav>
 	        <ul>
 	            <li><a href = "index.html">ABOUT</a></li>
-              <li><a href = "bluehive.html">WORK</a></li>
+              <li><a href = "work.html">WORK</a></li>
               <li><a href = "photography.html">SIDE THINGS</a></li>
 	            <li><a href = "contact.html">CONTACT</a></li>
 	        </ul>
 	    </nav>
     </header>
 
-<img src="images/Main/mainprofile.png" alt="Sunny profile">
+<div class="wrapper2">
+<div class="hello-box"><img src="images/Main/mainprofile.png" width="200" height="200" alt="Sunny profile" class="responsive"></div>
 
+<div class="hello-box">
 <p class="hello">HELLO, I'M SUNNY.</p>
 <br>
 <p class="intro">I am a first year Masters of Information student at the
@@ -46,6 +43,8 @@ especially those eye-catching visuals and attention grabbing design.<br>
 I love learning new things. I take challenges and I work hard.
 And I always look at the bright side of things. (did you notice my name?)</p>
 <br>
+</div>
+</div>
 </body>
 
 
