--- a/photography.html
+++ b/photography.html
@@ -16,15 +16,18 @@
 	    <nav>
 	        <ul>
 	            <li><a href = "index.html">ABOUT</a></li>
-              <li><a href = "bluehive.html">WORK</a></li>
+              <li><a href = "work.html">WORK</a></li>
               <li><a href = "photography.html">SIDE THINGS</a></li>
 	            <li><a href = "contact.html">CONTACT</a></li>
 	        </ul>
 	    </nav>
+  </header>
+
+
 
 <p class="sub-title"> PHOTOGRAPHY </p>
 
-<img src="images/Photography/photo_memory.png" alt="Sunny profile">
+<img src="images/Photography/photo_memory.png" alt="Sunny profile" class="center">
 
 
 <p class="photo">I remember going through my mom's old albums and finding this photo.
@@ -37,17 +40,18 @@ Whether it's your first family trip or
 that one time you had girl's night with your friends,
 we all have those moments in life.</p>
 
-<img src="images/Photography/20170907_June&DJ_Sunflower4.jpg" alt="sunflower1">
-<img src="images/Photography/20170907_June&DJ_Sunflower5.jpg" alt="sunflower2">
-<img src="images/Photography/Chung_Beach_3.png" alt="chung1">
-<img src="images/Photography/Diers_Family_Hanbok_4.jpg" alt="hanbok1">
-<img src="images/Photography/Diers_Family_Hanbok_5.jpg" alt="hanbok2">
-<img src="images/Photography/Diers_Family_Hanbok_6.jpg" alt="hanbok3">
-<img src="images/Photography/Diers_Family_Park_17.jpg" alt="hanbok4">
-<img src="images/Photography/Hondo_1.jpg" alt="dog1">
-<img src="images/Photography/main_kc.png" alt="kc">
-<img src="images/Photography/Sena_Evan_Family-4.jpg" alt="family1">
-<img src="images/Photography/Sena_Evan_Family.jpg" alt="family2">
+<div id="flex" class="flex">
+  <div class="flex__item"><img src="images/Photography/20170907_June&DJ_Sunflower4.jpg" alt="sunflower1"></div>
+  <div class="flex__item"><img src="images/Photography/20170907_June&DJ_Sunflower5.jpg" alt="sunflower2"></div>
+  <div class="flex__item"><img src="images/Photography/Diers_Family_Hanbok_4.jpg" alt="diers1"></div>
+  <div class="flex__item"><img src="images/Photography/Diers_Family_Hanbok_5.jpg" alt="diers2"></div>
+  <div class="flex__item"><img src="images/Photography/Diers_Family_Park_12.jpg" alt="diers3"></div>
+  <div class="flex__item"><img src="images/Photography/Diers_Family_Park_22.jpg" alt="diers4"></div>
+  <div class="flex__item"><img src="images/Photography/Hondo_1.jpg" alt="dog1"></div>
+  <div class="flex__item"><img src="images/Photography/Sena_Evan_Family-4.jpg" alt="family1"></div>
+  <div class="flex__item"><img src="images/Photography/Sena_Evan_Family.jpg" alt="family2"></div>
+</div>
+
 
 </body>
 
