--- a/work.html
+++ b/work.html
@@ -9,51 +9,52 @@
     <link href="https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|EB+Garamond|Source+Serif+Pro" rel="stylesheet">
 
 </head>
+
+
+
 <body>
+  <div class="wrapper">
+
   <p class="titleline">SUNNY KIM</p>
 	<header>
 	    <nav>
 	        <ul>
 	            <li><a href = "index.html">ABOUT</a></li>
-              <li><a href = "bluehive.html">WORK</a></li>
+              <li><a href = "work.html">WORK</a></li>
               <li><a href = "photography.html">SIDE THINGS</a></li>
 	            <li><a href = "contact.html">CONTACT</a></li>
 	        </ul>
 	    </nav>
 
+      <div class="projects-grid">
+        <div class="projects">
+          <img src="images/Photography/linkedin.png" alt="linkedin">
+          <p class="project-text">Linkedin</p>
+        </div>
 
-<section class="columns">
+        <div class="projects">
+          <img src="images/Photography/bluehive.png" alt="bluehive">
+          <p class="project-text">BlueHive</p>
+        </div>
 
-	<div class="column">
-		<h2>BlueHive</h2>
-	</div>
+        <div class="projects">
+          <img src="images/Photography/foodgatherer.png" alt="foodgatherer">
+          <p class="project-text">Food Gatherers</p>
+        </div>
 
-	<div class="column">
-		<h2>iTrack</h2>
-	</div>
+        <div class="projects">
+          <img src="images/Photography/redesign.png" alt="redesign">
+          <p class="project-text">Redesign</p>
+        </div>
 
-  <div class="column">
-		<h2>Food Recall</h2>
-	</div>
-
-</section>
-
-
+      </div>
 </body>
 
 
-<footer>
-  <section class="columns">
+  <footer>
+    <div class="footer">
+    		<h3>Coded by Sunny Kim 2019</h3>
+    	</div>
+  </footer>
 
-  	<div class="column">
-      <i class="fab fa-linkedin"></i>
-  	</div>
-
-  	<div class="column">
-      <i class="fab fa-dribbble"></i>
-  	</div>
-
-    <div class="column">
-      <i class="fab fa-behance"></i>
-  	</div>
-</footer>
+</div>
